SERVER-77298: Prevent fassert after killing opCtx as part of reconstructing prepared txns